--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -13,8 +13,27 @@
       <text>排行榜</text>
     </view>
   </view>
+
   <view class="content">
+    <view class='slide'>
+      <image src="../../images/slide.png"></image>
+    </view>
+    <view class="portals">
+      <view class="item">
+        <image src='../../images/04.png'></image>
+        <text>私人FM</text>
+      </view>
+      <view class="item">
+        <image src='../../images/05.png'></image>
+        <text>每日歌曲推荐</text>
+      </view>
+      <view class="item">
+        <image src='../../images/06.png'></image>
+        <text>云音乐新歌榜</text>
+      </view>
+    </view>
   </view>
+
   <view class="player">
     <view class="poster">
       <image src='../../images/poster.jpg'></image>
