--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -27,8 +27,35 @@ page {
 }
 
 .content {
-  background-color: blue;
+  background-color: #111214;
   flex: 1;
+  color: #ccc;
+}
+
+.slide image {
+  width: 100%;
+  height: 130px;
+}
+
+.portals {
+  display: flex;
+}
+
+.portals .item {
+  flex: 1;
+}
+
+.portals .item image {
+  width: 60px;
+  height: 60px;
+  display: block;
+  margin: 10px auto;
+}
+
+.portals .item text {
+  display: block;
+  text-align: center;
+  font-size: 12px;
 }
 
 .player {
@@ -53,6 +80,7 @@ page {
 .info .title {
   display: block;
   color: #ccc;
+  font-size: 16px;
 }
 
 .controls image {
