--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -30,6 +30,7 @@ page {
   background-color: #111214;
   flex: 1;
   color: #ccc;
+  overflow: hidden;
 }
 
 .slide image {
@@ -58,16 +59,33 @@ page {
   font-size: 12px;
 }
 
-.player {
-  display: flex;
-  height: 50px;
-  background-color: #17181a;
+.list {
 }
 
-.poster image {
-  width: 40px;
-  height: 40px;
-  margin: 5px;
+.list .title {
+  font-size: 14px;
+  margin: 10px;
+}
+
+.list .inner {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.list .inner .item {
+  width: 33.33333%;
+  margin-bottom: 10px;
+}
+
+.list .inner .item image {
+  width: 100px;
+  height: 100px;
+  display: block;
+  margin: 0 auto;
+}
+
+.list .inner .item text {
+  font-size: 12px;
 }
 
 .info {
@@ -87,4 +105,16 @@ page {
   width: 40px;
   height: 40px;
   margin: 5px 2px;
+}
+
+.player {
+  display: flex;
+  height: 50px;
+  background-color: #17181a;
+}
+
+.poster image {
+  width: 40px;
+  height: 40px;
+  margin: 5px;
 }
