--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -35,7 +35,7 @@ page {
 
 .slide image {
   width: 100%;
-  height: 130px;
+  height: 150px;
 }
 
 .portals {
@@ -86,6 +86,9 @@ page {
 
 .list .inner .item text {
   font-size: 12px;
+  line-height: 2;
+  text-align: center;
+  display: block;
 }
 
 .info {
@@ -109,7 +112,6 @@ page {
 
 .player {
   display: flex;
-  height: 50px;
   background-color: #17181a;
 }
 
