--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -30,16 +30,22 @@
 
     <view class="portals">
       <view class="item">
-        <image src='../../images/04.png'></image>
-        <text>私人FM</text>
+        <navigator url="../demo1/demo1?name=私人" hover-class='my-hover'>
+          <image src='../../images/04.png'></image>
+          <text>私人FM</text>
+        </navigator>
       </view>
       <view class="item">
-        <image src='../../images/05.png'></image>
-        <text>每日歌曲推荐</text>
+        <navigator url="../demo2/demo2">
+          <image src='../../images/05.png'></image>
+          <text>每日歌曲推荐</text>
+        </navigator>
       </view>
       <view class="item">
-        <image src='../../images/06.png'></image>
-        <text>云音乐新歌榜</text>
+        <navigator url="../demo3/demo3" redirect>
+          <image src='../../images/06.png'></image>
+          <text>云音乐新歌榜</text>
+        </navigator>
       </view>
     </view>
     <view class='list'>
